--- a/pkg/README
+++ b/pkg/README
@@ -1,6 +1,8 @@
 ==== Emarhavil Heavy Functional Programming ====
 ================================================
 
+"ICFPC 2012: Gathering: the Lambda."
+
 ------------------
 ---- ABOUT US ----
 ------------------
@@ -35,6 +37,11 @@ Zizhuang Yang (Facebook)
 Tony Fernandez (Carnegie Mellon University; Google)
 Eric Holk (Indiana University; Mozilla Corporation)
 Eric Faust (Carnegie Mellon University; Mozilla Corporation)
+
+and our friendly IRC robots:
+
+Takoyaki Ikayokat
+Sourbot Tobruos
 
 ----------------------------------------
 ---- OUR LIGHTNING ROUND SUBMISSION ----
