--- a/pkg/README
+++ b/pkg/README
@@ -19,6 +19,8 @@ We would like to thank the Mozilla Corporation for allowing us the use of
 their office space over the weekend (keeping the lights and AC on for us,
 and keeping us fed!).
 
+HELP?  Contact:  joshua@joshuawise.com
+
 [1] http://www.rust-lang.org/
 
 ----------------------
